# Speedrun-Auto-Upload

./: .gitignore  README.md  funcs.py  main.py  pyproject.toml  requirements.txt
src/speedrun_auto_upload/: __main__.py  funcs.py  splits_io.py  youtube.py
